--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div>
-        <div class="panel top-left-panel id=red"></div>
-        <div class="panel top-right-panel id=green"></div>
+        <div class="panel top-left-panel" id="red"></div>
+        <div class="panel top-right-panel" id="green"></div>
     </div>
     <div>
-        <div class="panel bottom-left-panel id=blue"></div>
-        <div class="panel bottom-right-panel id=yellow"></div>
+        <div class="panel bottom-left-panel" id="blue"></div>
+        <div class="panel bottom-right-panel" id="yellow"></div>
     </div>
     
     <script src="simon.js"></script>
